# E-book-reader

./: .gitignore  CMakeLists.txt  README.md
docs/: android-build.md
docs/superpowers/plans/: 2026-05-10-android-tablet-ebook-reader.md
docs/superpowers/specs/: 2026-05-10-android-tablet-ebook-reader-design.md
qml/: Main.qml
qml/components/: BookCard.qml  EmptyLibraryView.qml  ImportButton.qml  ReaderToolbar.qml
qml/pages/: LibraryPage.qml  ReaderPage.qml  SettingsPage.qml
qml/readers/: EpubReader.qml  PdfReader.qml  TxtReader.qml
src/: main.cpp
src/book/: Book.h  BookImporter.cpp  BookImporter.h  BookRepository.cpp  BookRepository.h  LibraryController.cpp  LibraryController.h
src/reader/: EpubDocument.cpp  EpubDocument.h  PdfDocument.cpp  PdfDocument.h  PdfPageRenderer.cpp  PdfPageRenderer.h  ReaderController.cpp  ReaderController.h  TxtDocument.cpp  TxtDocument.h
src/storage/: AppDatabase.cpp  AppDatabase.h  AppPaths.cpp  AppPaths.h
tests/: CMakeLists.txt  tst_bookimporter.cpp  tst_bookrepository.cpp  tst_epubdocument.cpp  tst_librarycontroller.cpp  tst_pdfdocument.cpp  tst_pdfpagerenderer.cpp  tst_txtdocument.cpp
